apply plugin: 'com.android.application'

android {
    compileSdkVersion 29
    buildToolsVersion "29.0.1"
    defaultConfig {
        applicationId "com.ceshi.helloworld"
        minSdkVersion 15
        targetSdkVersion 29
        versionCode 1
        versionName "4.20"  //文件版本号
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }
    android.applicationVariants.all {
        variant ->
            variant.outputs.all {
                // 此处指定生成的apk文件名
                outputFileName = "shop181756.apk"
            }
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }


     repositories{
         flatDir
                 {
                     dirs 'libs'
                 }
     }

}



dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])

    //引入微信刷脸支付
    implementation(name:'wxfacepay-release_2.11.288.834', ext:'aar')

    implementation 'androidx.appcompat:appcompat:1.1.0'
    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
    //gif图片展示
    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.1'
    //网络请求
    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
    implementation 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
    implementation 'com.squareup.okhttp3:logging-interceptor:3.7.0'
    implementation 'com.squareup.okhttp3:okhttp:3.9.1'
    implementation 'com.google.code.gson:gson:2.8.5'

    implementation 'com.alibaba:fastjson:1.1.54.android'
}
